# WeTrainForever

./: .gitignore  Gym-PPO-plots.ipynb  README.md  environment.yaml  interactive.sbatch  pyproject.toml  submit.sbatch
8_gym-PPO/: PPO.py
BestAgents/: DDPG.pth  SAC_adam.pth  SAC_adam_2.pth  SAC_best.pth  SAC_best_2.pth  SAC_best_3.pth  SAC_sls.pth  td3_1988388_pool_P_PER.pt  td3_poolWithSAC_game_1989994_slim.pt  td3_poolWithSelfPlay_1990484_slim.pt  td3_pool_1988388_slim.pt
Hockey-TD3/: TD3_agent.py  action_noises.py  buffers.py  commandline_config.py  main.py  opponent.py  plot.ipynb  plot_heatmap.ipynb  plot_results_report.ipynb  progress.txt  requirements.txt  run_train.sh  td3_algo.py
Hockey-TD3/checkpoint1/: Checkpoint1_plots.ipynb  pendulum_commandline_config.py  run_pendulum.sh  train_pendulum.py
Hockey-TD3/tournament/: download_agent_cluster.sh  run_client.py  run_tournament.sh
wtf/: DDPG.py  DDPG_Sls.py  build_tournament_dataset.py  compare_agents.py  eval.py  hockey.py  plot-pendulum.py  plotting.py  report_plots.py  selfplay.py  train-2.py  train-2_without-simfirst.py  train-ddpg.py  train-pendulum.py  train-sac.py  train.py  trainsac.py  util.py  utils.py  utilssac.py
wtf/agents/: Agent_Pool.py  DDPG.py  SAC.py  Sac_utils.py  utils.py
wtf/eval/: compare_agents.py  eval.py  plot-pendulum.py  plotting.py  report_plots.py
wtf/line_search/: __init__.py  sls.py  sls_utils.py
wtf/train/: selfplay.py  train-ddpg.py  train-pendulum.py  train.py
