[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abc"
description = "best master thesis ever!!!"
version = "0.0.1"
authors = [
]
maintainers = [
]
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "swig",
    "gymnasium[box2d]",
    "tensorboardx",
    "notebook",
    "jupyterlab",
    "ipympl",
    "imageio",
    "tqdm",
    "normflows",
    "hockey @ git+https://github.com/martius-lab/hockey-env.git",
    "comprl @ git+https://github.com/martius-lab/teamproject-competition-server.git#egg=comprl&subdirectory=comprl",
]


[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
]

[tool.black]
skip-string-normalization = true
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.uv]
python-preference = "only-system"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["wtf", "hockey-env/hockey"]